fix: removed userEntity schema